# TradingChances

./: .env.example  README.md  config.yaml  pyproject.toml
migrations/: 001_init.sql
src/polymarket_arb/: __init__.py  __main__.py  backtest.py  book.py  cli.py  command_bus.py  config.py  control.py  edge_quality.py  engine.py  execution.py  logging_utils.py  market_registry.py  market_rules.py  metrics.py  normalizer.py  order_manager.py  orderbook_snapshot.py  persistence.py  rate_limiter.py  risk.py  safety_watchdog.py  slippage_monitor.py  strategy.py  types.py  ws_market.py  ws_user.py  wss_auth.py
tests/: test_backtest_accounting.py  test_book_anomaly_detection.py  test_book_invariants.py  test_edge_decay_guard.py  test_engine_flatten_invariant.py  test_engine_killswitch_flatten.py  test_execution_adapter.py  test_logging_redaction.py  test_market_mapping_backtest.py  test_market_registry_labels.py  test_market_registry_validation.py  test_order_manager.py  test_orderbook_snapshot_sanity.py  test_risk_loss_breakers.py  test_risk_manager.py  test_risk_position_accounting.py  test_slippage_monitor.py  test_snapshot_dedupe.py  test_user_ws_watchdog.py  test_ws_market_resync.py  test_wss_auth.py
