[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-clob-arb-bot"
version = "0.1.0"
description = "Deterministic asyncio Polymarket CLOB arbitrage bot MVP"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "aiosqlite>=0.20.0",
  "PyYAML>=6.0.1",
  "websockets>=12.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
